--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@capacitor/cli": "^5.0.4",
     "@capacitor/core": "^5.0.4",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
