--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@capacitor/cli": "^5.0.4",
     "@capacitor/core": "^5.0.4",
     "@capacitor/ios": "^5.0.4",
+    "@capacitor/keyboard": "^5.0.4",
+    "@capacitor/status-bar": "^5.0.4",
     "core-js": "^3.8.3",
     "fastclick": "^1.0.6",
     "lodash": "^4.17.21",
