--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/ios": "^5.0.4",
     "@capacitor/keyboard": "^5.0.4",
     "@capacitor/status-bar": "^5.0.4",
+    "@jofr/capacitor-media-session": "^3.0.0",
     "core-js": "^3.8.3",
     "fastclick": "^1.0.6",
     "lodash": "^4.17.21",
